spade-tests/src/snapshots/spade_tests__usefulness__tests__enum_missing_pattern_message_with_named_args_is_good.snap
---
source: spade-tests/src/usefulness.rs
---
    enum A {
        X{a: bool},
        Y
    }
fn test(input: A) -> bool {
    match input {
        A::Y => true
    }
}


error: Non-exhaustive match: patterns A::X(a: false), A::X(a: true) not covered
  ┌─ testinput:6:5
  │  
6 │ ╭     match input {
7 │ │         A::Y => true
8 │ │     }
  │ ╰─────^ patterns A::X(a: false), A::X(a: true) not covered


