spade-tests/src/snapshots/spade_tests__usefulness__tests__even_more_missing_enum_branch_errors.snap
---
source: spade-tests/src/usefulness.rs
---
enum X {
    A,
    B,
    C,
    D,
    E,
    F,
}

fn uwu(x: X) -> bool {
    match x {
        X::A => true,
    }
}


error: Non-exhaustive match: patterns X::B, X::C and 3 more not covered
   ┌─ testinput:11:5
   │  
11 │ ╭     match x {
12 │ │         X::A => true,
13 │ │     }
   │ ╰─────^ patterns X::B, X::C and 3 more not covered
