spade-tests/src/snapshots/spade_tests__usefulness__tests__missing_struct_pattern_works.snap
---
source: spade-tests/src/usefulness.rs
---
struct A {x: bool, y: bool}

fn uwu(a: A) -> bool {
    match a {
        A(true, true) => true,
    }
}


error: Non-exhaustive match: patterns A(x: true, y: false), A(x: false, y: false) and 1 more not covered
  ┌─ testinput:4:5
  │  
4 │ ╭     match a {
5 │ │         A(true, true) => true,
6 │ │     }
  │ ╰─────^ patterns A(x: true, y: false), A(x: false, y: false) and 1 more not covered
